# shannonfi

./: .gitignore  Anchor.toml  BUILD_STATUS.md  CHECKLIST.md  CLAUDE.md  Cargo.toml  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTANCES.md  KEEPER_SETUP.md  LOCAL_TEST_PLAN.md  PLAN.md  PRICING_GUIDE.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START.md  README.md  SKILL.md  ecosystem.config.cjs  package-lock.json  package.json  switch-asset.sh  tsconfig.json
backtest/: COINGECKO_ANALYSIS.md  HISTORICAL_BENCHMARK_REPORT.md  INCEPTION_REPORT.md  README.md  RESULTS.md  RESULTS_REAL_PRICES.md  coingecko_results.json  generate_charts.py  historical_results.json  inception_timeseries.csv  requirements.txt  shannon_backtest.py  shannon_backtest_coingecko.py  shannon_backtest_real.py  shannon_full_history.py  shannon_historical_analysis.py  shannon_since_inception.py
bot/: .gitignore  BINANCE_SCANNER.md  BINANCE_SETUP.md  README.md  SCANNER_CRON.md  liquidate.sh  package-lock.json  package.json  scan-binance-daily.sh  scan-coinbase-daily.sh  scan-mb-daily.sh  send-analysis.ts  shannonfi.config.hype-mb.yaml  shannonfi.config.yaml.example  start-instance.sh  test-telegram-buttons.ts  test-telegram.ts
cex/: .env.example  .gitignore  README.md  package-lock.json  package.json
docs/: BINANCE_ADAPTER.md  CONFIGURATION.md  PM2_GUIDE.md  (+8 more)
programs/shannonfi/: Cargo.toml
programs/shannonfi/src/: constants.rs  errors.rs  events.rs  lib.rs  math.rs  state.rs
programs/shannonfi/src/instructions/: deposit.rs  initialize.rs  mod.rs  rebalance.rs  set_keeper.rs  withdraw.rs
(+177 files in other folders)
