[package]
name = "shannonfi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shannonfi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
solana-program = "1.18"
spl-token = "4.0"

# Note: Jupiter CPI and Pyth SDK have complex dependencies.
# For localnet testing, we'll mock these out and use them only in production.
# In actual deployment, use the correct versions:
# jupiter-cpi = { version = "4", features = ["cpi"] }
# pyth-solana-receiver-sdk = { version = "1.2" }

[dev-dependencies]
anchor-client = "0.30.1"
